--- a/documentation.html
+++ b/documentation.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>AustESE: Australian Electronic Scholarly Editing - Contact</title>
+    <title>AustESE: Australian Electronic Scholarly Editing - Documentation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -40,7 +40,7 @@
               <li><a href="code.html">Source Code</a></li>
               <li><a href="documentation.html">Documentation</a></li>
               <li><a href="people.html">People</a></li>
-              <li class="active"><a href="contact.html">Contact</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
             <p class="pull-right" style="margin-bottom:0;margin-top:10px;"><a href="http://nectar.org.au/"><img src="img/nectarlogo-inverse.png" alt="NeCTAR"/></a></p>
             <p class="pull-right" style="margin-bottom:0;margin-top:10px;margin-right:25px;"><a href="http://www.uq.edu.au"><img src="img/UQlogo-white-transparent.png" alt="UQ"/></a></p>
@@ -50,24 +50,20 @@
       </div>
     </div>
     <div class="container">
-      <section id="contact">
-          <div  class="page-header">
-              <h1>Contact</h1>
+      <section id="documentation">
+          <div class="page-header">
+              <h1>Documentation</h1>
           </div>
-		  <p>For enquiries about the project, contact the Project Manager:</p>
-		  <p>Wilfred Brimblecombe<br/>
-		      <a href="mailto:w.brimblecombe@uq.edu.au">w.brimblecombe@uq.edu.au</a><br/>
-              <br/>
+	  <h2>API Documentation</h2>
+	  <ul>
+	    <li><a href="http://austese.net/lorestore/docs.html">lorestore (Annotation service) API docs</a></li>
+	    <li><a href="http://austese.net/calliope-api">Calliope (MVD Service) API docs</a></li>
+	  </ul>
 
-              <a href="http://www.itee.uq.edu.au/eresearch">eResearch Group</a><br/>
-              School of Information Technology and Electrical Engineering (ITEE)<br/>
-              78-709<br/>
-              The University of Queensland<br/>
-              St Lucia QLD Australia 4072<br/>
-          </p>
-          
-          <p style="margin-top:45px">
-          <a href="https://twitter.com/intent/tweet?screen_name=AustESE" class="twitter-mention-button" data-size="large" data-related="AnnaGerber,TomCollinsAndCo">Tweet to @AustESE</a>
+          <h2>Project Documentation</h2>
+	  <ul>
+            <li><a href="https://github.com/uq-eresearch/AustESE/wiki">AustESE wiki</a></li>
+	  </ul>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
           </p>
       </section>
