--- a/people.html
+++ b/people.html
@@ -37,10 +37,9 @@
             <ul class="nav">
               <li><a href="index.html">About</a></li>
               <li><a href="services.html">Services</a></li>
+              <li><a href="code.html">Source Code</a></li>
+              <li><a href="documentation.html">Documentation</a></li>
               <li class="active"><a href="people.html">People</a></li>
-              <li><a href="events.html">Events</a></li>
-              <li><a href="publications.html">Publications</a></li>
-              <li><a href="related.html">Related</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
             <p class="pull-right" style="margin-bottom:0;margin-top:10px;"><a href="http://nectar.org.au/"><img src="img/nectarlogo-inverse.png" alt="NeCTAR"/></a></p>
@@ -55,6 +54,14 @@
           <div class="page-header">
               <h1>People</h1>
           </div>
+          <h2>Project Team</h2>
+          <ul>
+            <li>Project Manager - <a href="https://github.com/uqwilf">Wilfred Brimblecombe</a>;</li>
+            <li>Workflow Analyst and Community Liaison - <a href="https://github.com/RogerOsborne">Dr Roger Osborne</a>;</li>
+            <li>Senior Software Engineer - <a href="https://github.com/AnnaGerber">Anna Gerber</a>;</li>
+            <li>Software Engineer - <a href="https://github.com/omad">Damien Ayers</a> (from Feb 2013);</li>
+	    <li>Software Engineer - <a href="https://github.com/uqsmcnau">Simon McNaughton</a> (Summer 2012).</li>
+          </ul>
           <h2>Project Steering Committee</h2>
           <ul>
             <li>Community Project Leader and Chair - Prof Paul Eggert, UNSW;</li>
@@ -75,13 +82,7 @@
             <li>Prof Paul Eggert, UNSW;</li>
             <li>Prof Jane Hunter, UQ.</li>
           </ul>
-          <h2>Project Team</h2>
-          <ul>
-            <li>Project Manager - Wilfred Brimblecombe;</li>
-            <li>Workflow Analyst and Community Liaison - Dr Roger Osborne;</li>
-            <li>Senior Software Engineer - Anna Gerber;</li>
-            <li>Junior Software Developer - TBA.</li>
-          </ul>
+
       </section>
       <footer class="footer">
           <div class="row">
