Add link for lightbox module

--- a/code.html
+++ b/code.html
@@ -93,6 +93,11 @@
 	  License: GPL 3.0<br/>
 	  This module provides collation tools for identifying and visualising variants using the <a href="#calliope">Calliope</a> service.</p>
 
+	  <h3 id="lightbox"><tt>austese_lightbox</tt> Drupal Module</h3>
+	  <p><a href="https://github.com/uq-eresearch/austese_lightbox/">https://github.com/uq-eresearch/austese_lightbox/</a><br/>
+	  License: GPL 3.0<br/>
+	  This module provides tools for comparing and manipulating images.</p>
+
 	  <h3 id="theme">AustESE Drupal theme</h3>
 	  <p><a href="https://github.com/uq-eresearch/austese_theme/">https://github.com/uq-eresearch/austese_theme/</a><br/>
 	  License: GPL 2.0 or later<br/>
