Add reading module to github pages

--- a/code.html
+++ b/code.html
@@ -98,6 +98,11 @@
 	  License: GPL 3.0<br/>
 	  This module provides tools for comparing and manipulating images.</p>
 
+	  <h3 id="reading"><tt>austese_reading</tt> Drupal Module</h3>
+	  <p><a href="https://github.com/uq-eresearch/austese_reading/">https://github.com/uq-eresearch/austese_reading/</a><br/>
+	  License: GPL 3.0<br/>
+	  This module provides a reading interface for a digital edition.</p>
+
 	  <h3 id="theme">AustESE Drupal theme</h3>
 	  <p><a href="https://github.com/uq-eresearch/austese_theme/">https://github.com/uq-eresearch/austese_theme/</a><br/>
 	  License: GPL 2.0 or later<br/>
