--- a/services.html
+++ b/services.html
@@ -87,7 +87,7 @@
             <div id="publishing" class="span4">
                 <h2>Electronic Publishing</h2>
                 <p>Tools for versioning, locking &amp; publishing electronic scholarly editions as well as to export to formats such as TEI, MS Word &amp; ePub.</p>
-		  <p>This service is implemented by the <a href="code.html#repository">austese_repository</a> Drupal module.</p>
+		  <p>This service is implemented by the <a href="code.html#repository">austese_repository</a> and <a href="code.html#reading">austese_reading</a> Drupal modules.</p>
             </div>
           </div>
           <div class="row">
