Add active class to menu links for these pages

--- a/related.html
+++ b/related.html
@@ -40,7 +40,7 @@
               <li><a href="people.html">People</a></li>
               <li><a href="events.html">Events</a></li>
               <li><a href="publications.html">Publications</a></li>
-              <li><a href="related.html">Related</a></li>
+              <li class="active"><a href="related.html">Related</a></li>
               <li class="active"><a href="contact.html">Contact</a></li>
             </ul>
             <p class="pull-right" style="margin-bottom:0;margin-top:10px;"><a href="http://nectar.org.au/"><img src="img/nectarlogo-inverse.png" alt="NeCTAR"/></a></p>
