--- a/code.html
+++ b/code.html
@@ -37,7 +37,7 @@
             <ul class="nav">
               <li><a href="index.html">About</a></li>
               <li><a href="services.html">Services</a></li>
-              <li><a href="code.html">Source Code</a></li>
+              <li class="active"><a href="code.html">Source Code</a></li>
               <li><a href="documentation.html">Documentation</a></li>
               <li><a href="people.html">People</a></li>
               <li><a href="contact.html">Contact</a></li>
