--- a/documentation.html
+++ b/documentation.html
@@ -38,7 +38,7 @@
               <li><a href="index.html">About</a></li>
               <li><a href="services.html">Services</a></li>
               <li><a href="code.html">Source Code</a></li>
-              <li><a href="documentation.html">Documentation</a></li>
+              <li class="active"><a href="documentation.html">Documentation</a></li>
               <li><a href="people.html">People</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
